# python-docuvortex

./: .dockerignore  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yaml
app/: ingest.py  main.py  query.py  settings.py  streamlit_app.py
app/.streamlit/: config.toml
app/data/chroma/: chroma-collections.parquet  chroma-embeddings.parquet
app/data/chroma/index/: id_to_uuid_0e38ed02-1544-4297-a4e3-a21f2623071a.pkl  id_to_uuid_231d3ebb-bf6b-4e23-b082-a928b9920afb.pkl  id_to_uuid_742cdaf5-f415-4d2a-a87a-daada12ab26d.pkl  index_metadata_0e38ed02-1544-4297-a4e3-a21f2623071a.pkl  index_metadata_231d3ebb-bf6b-4e23-b082-a928b9920afb.pkl  index_metadata_742cdaf5-f415-4d2a-a87a-daada12ab26d.pkl  uuid_to_id_0e38ed02-1544-4297-a4e3-a21f2623071a.pkl  uuid_to_id_231d3ebb-bf6b-4e23-b082-a928b9920afb.pkl  uuid_to_id_742cdaf5-f415-4d2a-a87a-daada12ab26d.pkl
app/ingest/: utils.py  vortex_ingester.py  vortex_pdf_parser.py  vortext_content_iterator.py  vortext_pdf_parser.py
app/query/: vortex_query.py
tests/: test_vortex_pfd_parser.py
